include/clks/exec.h


struct clks_exec_proc_snapshot {
    u64 pid;
    u64 ppid;
    u64 state;
    u64 started_tick;
    u64 exited_tick;
    u64 exit_status;
    u64 runtime_ticks;
    u64 mem_bytes;
    u64 tty_index;
    u64 last_signal;
    u64 last_fault_vector;
    u64 last_fault_error;
    u64 last_fault_rip;
    u64 uid;
    u64 role;
    char path[CLKS_EXEC_PROC_PATH_MAX];
    u64 main_thread_id;
    u64 thread_state;
    u64 scheduler_task_id;
    u64 blocked_reason;
    u64 wake_tick;
    u64 wait_target_pid;
    u64 parent_waiting;
};

clks_bool clks_exec_run_path(const char *path, u64 *out_status);

clks_bool clks_exec_run_pathv(const char *path, const char *argv_line, const char *env_line, u64 *out_status);

clks_bool clks_exec_run_pathv_io(const char *path, const char *argv_line, const char *env_line, u64 stdin_fd,
                                 u64 stdout_fd, u64 stderr_fd, u64 *out_status);

clks_bool clks_exec_spawn_path(const char *path, u64 *out_pid);

clks_bool clks_exec_spawn_pathv(const char *path, const char *argv_line, const char *env_line, u64 *out_pid);

u64 clks_exec_wait_pid(u64 pid, u64 *out_status);

clks_bool clks_exec_request_exit(u64 status);

u64 clks_exec_fd_open(const char *path, u64 flags, u64 mode);

u64 clks_exec_fd_open_pty(void);

u64 clks_exec_fd_read(u64 fd, void *out_buffer, u64 size);

u64 clks_exec_fd_write(u64 fd, const void *buffer, u64 size);

u64 clks_exec_fd_close(u64 fd);

u64 clks_exec_fd_dup(u64 fd);

u64 clks_exec_dl_open(const char *path);

u64 clks_exec_dl_close(u64 handle);

u64 clks_exec_dl_sym(u64 handle, const char *symbol);

u64 clks_exec_user_heap_alloc(u64 size);
u64 clks_exec_vm_alloc(u64 size, u64 flags);
u64 clks_exec_mmap(u64 addr_hint, u64 size, u64 prot, u64 flags, u64 fd, u64 offset);
u64 clks_exec_vm_free(u64 addr, u64 size);
u64 clks_exec_current_pid(void);

u32 clks_exec_current_tty(void);

u64 clks_exec_current_argc(void);

clks_bool clks_exec_copy_current_argv(u64 index, char *out_value, usize out_size);

u64 clks_exec_current_envc(void);

clks_bool clks_exec_copy_current_env(u64 index, char *out_value, usize out_size);

u64 clks_exec_current_signal(void);

u64 clks_exec_current_fault_vector(void);

u64 clks_exec_current_fault_error(void);

u64 clks_exec_current_fault_rip(void);

u64 clks_exec_proc_count(void);

clks_bool clks_exec_proc_pid_at(u64 index, u64 *out_pid);
clks_bool clks_exec_proc_snapshot(u64 pid, struct clks_exec_proc_snapshot *out_snapshot);
clks_bool clks_exec_proc_snapshot_copy(u64 pid, void *out_snapshot, u64 out_size);
u64 clks_exec_proc_kill(u64 pid, u64 signal);

clks_bool clks_exec_suspend_current_from_syscall(void *frame_ptr, u64 syscall_ret);

u64 clks_exec_sleep_ticks(u64 ticks);

u64 clks_exec_yield(void);

u64 clks_exec_request_count(void);

u64 clks_exec_success_count(void);

clks_bool clks_exec_is_running(void);
clks_bool clks_exec_current_path_is_user(void);
clks_bool clks_exec_current_user_ptr_readable(u64 addr, u64 size);

clks_bool clks_exec_current_user_ptr_writable(u64 addr, u64 size);